# OpenAnomaly

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.docker.yaml  config.yaml  config.yaml.example  docker-compose.yml  flake.nix  main.py  manage.py  pipelines.yaml  pyproject.toml  pytest.ini  task.md  test_output.txt  test_result.txt  tox.ini
data/: boom_sample.csv
data/boom_raw/ds-0-T/: dataset_info.json
data/boom_raw/ds-1-T/: dataset_info.json
data/boom_raw/ds-10-T/: data-00000-of-00001.arrow  dataset_info.json
data/boom_raw/ds-100-T/: data-00000-of-00001.arrow  dataset_info.json
data/boom_raw/ds-1000-5T/: dataset_info.json
data/boom_raw/ds-1001-T/: data-00000-of-00001.arrow
data/boom_raw/ds-1002-5T/: data-00000-of-00001.arrow
data/boom_raw/ds-1003-10S/: data-00000-of-00001.arrow
data/boom_raw/ds-1004-5T/: data-00000-of-00001.arrow
data/boom_raw/ds-1005-10S/: data-00000-of-00001.arrow
data/boom_raw/ds-4-5T/: data-00000-of-00001.arrow
data/boom_raw/ds-5-T/: data-00000-of-00001.arrow
data/boom_raw/ds-54-10S/: data-00000-of-00001.arrow
data/boom_raw/ds-8-5T/: data-00000-of-00001.arrow
data/boom_raw/ds-81-5T/: data-00000-of-00001.arrow
data/boom_raw/ds-84-5T/: data-00000-of-00001.arrow
data/ds-0-T/: data-00000-of-00001.arrow
docs/: implementation_plan.md  kafka-integration.md  technical_design.md  testing-helm-locally.md
helm/: test-values.yaml
helm/openanomaly/: Chart.yaml  README.md  values.yaml
helm/openanomaly/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  beat-deployment.yaml  configmap.yaml  secret.yaml  worker-deployment.yaml  worker-hpa.yaml
openanomaly/: __init__.py  main.py
openanomaly/adapters/: __init__.py
openanomaly/adapters/config/: __init__.py  (+3 more)
openanomaly/common/: apps.py  dataclasses.py  health.py
openanomaly/config/: asgi.py  auth_config.py  celery.py  django_store.py  schema.py  settings.py  urls.py  utils.py  wsgi.py
openanomaly/core/: __init__.py
openanomaly/pipelines/: admin.py  apps.py  inference.py  models.py  serializers.py  signals.py  tasks.py  training.py  urls.py  views.py
research/: TSFM_GUIDE.md
scripts/: fetch_boom_sample.py  load_boom_to_victoria.py  scale_test.py  seed_data.py  test-helm-local.ps1  verify_config.py  verify_django_scheduler.py
tests/: README.md  conftest.py
tests/adapters/: conftest.py  test_chronos.py  test_kafka_producer.py  test_prometheus.py
tests/api/: test_trigger_endpoints.py
tests/core/: test_pipeline.py
tests/integration/: test_e2e.py  test_ha.py  test_mongo_integration.py  test_persistence.py  test_persistence_django.py  test_scheduler_ha.py
tests/services/: test_inference_loop.py  test_training_loop.py
tests/unit/: test_mongo_store.py  test_settings.py
(+36 files in other folders)
