[project]
name = "openanomaly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.1",
    "fastapi>=0.128.0",
    "nixtla>=0.7.2",
    "pymongo>=4.15.5",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
    "opentelemetry-exporter-prometheus-remote-write>=0.43b0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-api>=1.22.0",
    "redis>=5.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "chronos-forecasting @ git+https://github.com/amazon-science/chronos-forecasting.git",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
